<resources>
    <string name="app_name">TrashTalk</string>
    <string name="image_view">Image View</string>
    <string name="detect">Detect</string>
    <string name="run_model">Running the model...</string>
    <string name="restart">Restart</string>
    <string name="select">Select</string>
    <string name="live">Live</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="explore">Explore</string>
    <string name="cardboard">Cardboard</string>
    <string name="cardboard_collectables">Packaging cardboard\ncorrugated cardboard\ngrey board\nwashing powder cardboard</string>
    <string name="cardboard_collection_reason">Cardboard recycling makes an important contribution to the sustainable management of wood as a renewable resource.</string>
    <string name="recycling_station">Take me to recycling station</string>
    <string name="what_is_collected">What is collected?</string>
    <string name="why_collect">Why should I collect?</string>
    <string name="aluminum_collectables">Drinks cans\npet food dishes\nfoodstuff tubes\nmeal trays\nfilms and foils\nsmaller aluminium parts\nall other packaging materials with the Alu-Recycling mark</string>
    <string name="aluminum_collection_reason">Aluminium Recycling saves around 95% of the energy compared to the primary production process. Aluminium can be recycled again and again.</string>
    <string name="no_recyclable">No match found</string>
    <string name="no_recyclable_helptext">The recyclable you scanned was not recognized as a material that is recyclable in your location. You may try to manually select the material in the home view.</string>
    <string name="add_marker_header">New Recycling Location</string>
    <string name="add_marker_name_hint">Name</string>
    <string name="add_marker_name_description">Description</string>
    <string name="cardboard_checkbox">Cardboard</string>
    <string name="recycling_location_features">What recycling is offered?</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="aluminum">Aluminium</string>
    <string name="aluminum_checkbox">Aluminum</string>
    <string name="aluminium" />
    <string name="plastic_bottle">Plastic Bottle</string>
    <string name="plastic_bottle_checkbox">Plastic Bottle</string>
    <string name="plastic_collectables">PET bottles\n\nCollect separately: Bottles for detergent and cleaning products\n\nDo not collect:\nMilk, cream and yogurt bottles</string>
    <string name="plastic_collection_reason">PET recycling significantly relieves the burden on the environment. Recycling PET beverage bottles reduces the impact on the climate by 75% compared to incineration in an incineration plant.</string>
    <string name="plastic">Plastic Bottles</string>
</resources>